--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -6,10 +6,10 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
+  position: absolute;
   overflow: hidden;
+  left: 50%;
+  transform: translateY(-27rem) translateX(-50%);
 }
 
 @media screen and (max-width: 966px) {
