Update `background-color` of homepage's hero container

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -39,7 +39,7 @@
   padding: 2rem;
   pointer-events: none;
   border-radius: 2px;
-  background-color: #52626c;
+  background-color: #325b4e;
   mix-blend-mode: multiply;
   color: #fff;
   
