Set the duplicate menu to `display: none` on larger screen sizes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,3 +40,9 @@ a {
 p, li, dt, dd, figcaption {
   max-width: 80ch;
 }
+
+@media (min-width: 997px) {
+  .navbar-sidebar {
+    display: none;
+  }
+}
