Improve visibility of secondary menu button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -46,3 +46,11 @@ p, li, dt, dd, figcaption {
     display: none;
   }
 }
+
+.menu--responsive .menu__button {
+  color: #fff;
+  background: var(--ifm-link-color);
+  border: 0;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  min-height: 45px;
+}
