Fix more Docusaurus keyboard tabbing issues

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,16 +41,35 @@ p, li, dt, dd, figcaption {
   max-width: 80ch;
 }
 
-@media (min-width: 997px) {
-  .navbar-sidebar {
-    display: none;
-  }
-}
-
 .menu--responsive .menu__button {
   color: #fff;
   background: var(--ifm-link-color);
   border: 0;
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
   min-height: 45px;
+}
+
+/* Fix Docusaurus tabbing issues */
+@media (max-width: 996px) {
+  .navbar--fixed-top:not(.navbar-sidebar--show) .navbar-sidebar__items {
+    display: none;
+  }
+  .navbar--fixed-top.navbar-sidebar--show:not(:focus-within) .navbar-sidebar,
+  .navbar--fixed-top.navbar-sidebar--show:not(:focus-within) .navbar-sidebar__backdrop {
+    display: none;
+  }
+}
+@media (min-width: 997px) {
+  .navbar-sidebar {
+    display: none;
+  }
+}
+body {
+  overflow-y: auto!important;
+}
+:focus {
+  outline-color: -webkit-focus-ring-color !important;
+  outline-style: auto !important;
+  outline-width: thin !important;
+  outline: revert !important;
 }
