--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -73,3 +73,39 @@ body {
   outline-width: thin !important;
   outline: revert !important;
 }
+.requirement {
+  color: black;
+  background-color:#88ffaa;
+  display: inline-block;
+  font-style: normal;
+  line-height: 1;
+  padding: 0.3em 0.5em;
+  border-radius: 0.5em;
+}
+.enhancement {
+  color: black;
+  background-color:#ffff88;
+  display: inline-block;
+  font-style: normal;
+  line-height: 1;
+  padding: 0.3em 0.5em;
+  border-radius: 0.5em;
+}
+.impractical {
+  color: black;
+  background-color:#ff8866;
+  display: inline-block;
+  font-style: normal;
+  line-height: 1;
+  padding: 0.3em 0.5em;
+  border-radius: 0.5em;
+}
+.undecided {
+  color: black;
+  background-color:#ccc;
+  display: inline-block;
+  font-style: normal;
+  line-height: 1;
+  padding: 0.3em 0.5em;
+  border-radius: 0.5em;
+}
