Add initial tutorial from NRCAN Site Moved tutorial from NRCAN site to web-map-doc, written by Peter Rushforth https://www.nrcan.gc.ca/science-and-data/science-and-research/earth-sciences/geography/topographic-information/web-services/maps-html-tutorial/18875
Co-authored-by: Peter Rushforth <peter.rushforth@nrcan.gc.ca>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,7 +31,13 @@ a {
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
+  background-color: rgb(242, 222, 222);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+[data-theme='dark'] .docusaurus-highlight-code-line {
+  background-color: rgb(100, 100, 100);
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
